--- a/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
+++ b/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
@@ -147,11 +147,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NeuralLayer.h" />
+    <ClInclude Include="NeuralNetwork.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NeuralLayer.cpp" />
+    <ClCompile Include="NeuralNetwork.cpp" />
     <ClCompile Include="NeuralNetworksV3.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
