--- a/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj.filters
+++ b/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="NeuralLayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NeuralNetwork.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NeuralLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NeuralNetwork.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
