--- a/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
+++ b/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
@@ -146,12 +146,16 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GeneticAlgorithm.h" />
+    <ClInclude Include="Genotype.h" />
     <ClInclude Include="NeuralLayer.h" />
     <ClInclude Include="NeuralNetwork.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GeneticAlgorithm.cpp" />
+    <ClCompile Include="Genotype.cpp" />
     <ClCompile Include="NeuralLayer.cpp" />
     <ClCompile Include="NeuralNetwork.cpp" />
     <ClCompile Include="NeuralNetworksV3.cpp" />
