restructuring build repo

--- a/roomba_host/CMakeLists.txt
+++ b/roomba_host/CMakeLists.txt
@@ -10,5 +10,4 @@ target_link_libraries(roombamodel
   ${GAZEBO_LIBRARIES})
 
 add_library(roombasim SHARED roombasim.cc)
-target_link_libraries(roombasim ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES}
-)
+target_link_libraries(roombasim ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
