Started work on Agents. Only a few errors left in other classes now.

--- a/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
+++ b/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj
@@ -146,6 +146,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Agent.h" />
     <ClInclude Include="GeneticAlgorithm.h" />
     <ClInclude Include="GeneticsManager.h" />
     <ClInclude Include="Genotype.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Agent.cpp" />
     <ClCompile Include="GeneticAlgorithm.cpp" />
     <ClCompile Include="GeneticsManager.cpp" />
     <ClCompile Include="Genotype.cpp" />
