--- a/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj.filters
+++ b/NeuralNetworksV3/NeuralNetworksV3/NeuralNetworksV3.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="GeneticsManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Agent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GeneticsManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Agent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
