--- a/roomba_host/models/obstacle/model.config
+++ b/roomba_host/models/obstacle/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>target</name>
+  <name>obstacle</name>
   <version>1.0</version>
   <sdf version="1.2">model-1_2.sdf</sdf>
   <sdf version="1.3">model-1_3.sdf</sdf>
@@ -14,7 +14,7 @@
   </author>
 
   <description>
-    A model of the iRobot Create.
+    A model of the iRobot Create. 
   </description>
 
   <depend>
